guard mount point lookup

Looking up a mount point for a path can fail. We should take care.

A check later that sourceDevice is valid is also adjusted as comparing two empty mount points should not be treated as the same device.

BUG: 508185